updating progress on hw1 and adding textbooks

--- a/CS_7840/hw/hw1/rarnold_hw1.ipynb
+++ b/CS_7840/hw/hw1/rarnold_hw1.ipynb
@@ -994,16 +994,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81a760d7",
+   "metadata": {},
+   "source": [
+    "## Need to know for midterm and final:\n",
+    "Non-negative matrix factorization (NMF) is another dimension reduction method that unlike PCA, "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 101,
    "id": "97759447",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy.optimize as sopt\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from scipy.linalg import eigh\n"
+    "\n"
    ]
   },
   {
@@ -1023,8 +1029,92 @@
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "7215beb8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "21d5e645",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "513bffb3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1d5ac31",
+   "metadata": {},
    "source": [
+    "## Homework Question 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "591d1606",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.optimize as sopt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "\n",
+    "guesses  = [np.array([1.5, 1.8])]\n",
+    "\n",
+    "for i in range(3):\n",
+    "    \n",
+    "    x = guesses[-1]\n",
+    "    s = -df(X)\n",
+    "    \n",
+    "    def f1d(alpha):\n",
+    "        return f(x + alpha*s)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bf7a067",
+   "metadata": {},
+   "source": [
+    "## Homework Question 6 : PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10f9372b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from scipy.linalg import eigh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9af5eee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the x train is the actual unidentified image matrix data \n",
     "data = x_train[0:15000, :, :]\n",
+    "# the y label is the truth data, or the answer key of what the digit should be \n",
     "label = y_train[0:15000]\n",
     "data = data.reshape(len(data), -1)\n",
     "data.shape"
@@ -1032,8 +1122,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "7215beb8",
+   "execution_count": null,
+   "id": "058dac25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,14 +1133,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "21d5e645",
+   "execution_count": null,
+   "id": "12950fae",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Implementation of the PCA algorithm \n",
     "sample_data = standardized_data\n",
     "covar_matrix = np.matmul(sample_data.T, sample_data)\n",
+    "\n",
+    "# eigen value with the highest variation gives the best representation of the data\n",
     "values, vectors = eigh(covar_matrix, eigvals=(782,783))\n",
     "vectors = vectors.T"
    ]
@@ -1058,11 +1150,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "513bffb3",
+   "id": "3af2dd4d",
    "metadata": {},
    "outputs": [],
    "source": [
     "new_coordinates = vectors @ sample_data.T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65a18143",
+   "metadata": {},
+   "source": [
+    "## Homework Question 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "545e6d18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = x_test[0:15000,:,:]\n",
+    "labels= y_test[0:15000]\n",
+    "data = data.reshape(len(data)-1)\n",
+    "standardized_data = StandardScaler().fit_transform(data)\n",
+    "sample_data = standardized_data\n",
+    "ica = decomposition.FastICA(n_components=2, fun='logcosh')\n",
+    "ica_data = ica.fit_transform(sample_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f8a8f69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ica_data = np.vstack((ica_data.T, labels)).T\n",
+    "ica_df = pd.DataFrame(data=ica_data, columns = [\"1st principle\",\"2nd principle\", \"label\"])\n",
+    "sn.FacetGrid(ica_df, hue=\"label\", height=6).map(plt.scatter, '1st_principal', '2nd_principal').add_legend()\n",
+    "plt.show()"
    ]
   }
  ],
