updated orange stuff and homework stuff from class today.

--- a/CS_7840/hw/hw2/rarnold_hw2.ipynb
+++ b/CS_7840/hw/hw2/rarnold_hw2.ipynb
@@ -598,15 +598,17 @@
     "\n",
     "        for i in range(len(current_weights)):\n",
     "            idx_i = input_index[i]\n",
-    "            for j in range(self.n_neurons_output):\n",
-    "                if not (self.act_fun[-1] == ActivationFunction.softmax):\n",
+    "            if (self.act_fun[-1] == ActivationFunction.softmax):\n",
+    "                for j in range(self.n_neurons_output):\n",
+    "                    self.WEIGHTS_OUTPUT[idx_i][j] = self.momentum * current_weights[i][j]- (\n",
+    "                        self.learning_rate * (DELTA_output[j,:] @ np.array(self.OUTPUT_HIDDEN[-1][i])).T)\n",
+    "                    self.BIAS_output -= self.learningRate *  (self.learning_rate * DELTA_output[j, :])\n",
+    "            else:\n",
+    "                for j in range(self.n_neurons_output):\n",
     "                    self.WEIGHTS_OUTPUT[idx_i][j] = self.momentum * current_weights[i][j] - (\n",
     "                                self.learning_rate * (DELTA_output[j] * self.OUTPUT_HIDDEN[-1][i]))\n",
     "                    self.BIAS_output[j] -= (self.learning_rate * DELTA_output[j])\n",
-    "                else:\n",
-    "                    self.WEIGHTS_OUTPUT[idx_i][j] = self.momentum * current_weights[i][j] - (\n",
-    "                                self.learning_rate * (DELTA_output[j] @ np.array(self.OUTPUT_HIDDEN[-1][i])).T)\n",
-    "                    self.BIAS_output[j] = 0.0\n",
+    "\n",
     "\n",
     "        # the k index here represents the hidden layer number\n",
     "        delta_prev = DELTA_output\n",
